修改备份相关代码
